pkp/pkp-lib#9504 Very low contrast ratio on no/error/off/stop color  - OJS 3.3

--- a/plugins/themes/default/styles/variables.less
+++ b/plugins/themes/default/styles/variables.less
@@ -24,7 +24,7 @@
 
 // Yes/no, success/error, on/off, go/stop, etc. Typically green and red.
 @yes:                    #00b24e;
-@no:                     #ff4040;
+@no:                     #A80000;
 
 // Text
 @text:                   rgba(0,0,0,0.87);
